--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -65,7 +65,7 @@
                     <p class="mdt me-auto">Product Total</p>
                     <p class="mdt">$11,700</p>
                   </div>
-                  <button class="btn btn-pri btnlg mt-3 w-100" type="button" routerLink="/order-detail">Continue</button>
+                  <button class="btn btn-pri btnlg mt-3 w-100" type="button" routerLink="/cart">Continue</button>
                 </div>
               </div>
             </div>
