--- a/src/app/pages/cart/cart.component.html
+++ b/src/app/pages/cart/cart.component.html
@@ -1,5 +1,13 @@
 <div class="container shopping-bag">
   <h4 class="my-4">Shopping Bag</h4>
+  <!--Breadcrumb-->
+  <nav aria-label="breadcrumb" class="step-process">
+    <ol class="breadcrumb">
+      <li class="breadcrumb-item active"><a routerLink="/cart">Shopping Cart</a></li>
+      <li class="breadcrumb-item"><a routerLink="/check-out">Check Out</a></li>
+      <li class="breadcrumb-item"><a routerLink="#">Place Order</a></li>
+    </ol>
+  </nav>
   <div class="table-summary">
     <div class="t-head row align-middle py-3 mb-3">
       <div class="col-5">
