--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -71,7 +71,7 @@
             </div>
             <!--search-button-start-->
             <div class="search-box">
-                <input type="text" placeholder="search...">
+                <input class="search-inp" type="text" placeholder="search...">
                 <a routerLink="#" class="iconsearch">
                   <i class="fa fa-search fa-lg"></i>
                 </a>
