--- a/src/styles.css
+++ b/src/styles.css
@@ -170,8 +170,10 @@ label{
   padding: 0px 2px;
   color:#000;
 }
+.search-inp{
+  width: 0;
+}
 input{
-  width:0px;
   border: none;
   padding:0;
   background: none;
@@ -181,7 +183,6 @@ input{
 .iconsearch{
   transition: 0.4s;
 }
-.
 
 /*NAV*/
 
@@ -242,11 +243,9 @@ nav li:nth-child(1){
 /*dropdown-menu-end*/
 /*check-box*/
 .check-box {
-  margin-right: 5px;
+  margin-right: 10px;
 }
-.check-cate{
-  width:30px;
-}
+
 /*FOOTER*/
 .card-footer{
   padding: 30px 0px;
@@ -440,7 +439,7 @@ body{
 }
 .nav--hidden {
   transform: translateY(-136px);
-  transition: 0.2s all;
+  transition: 0.4s all;
 }
 
 
