--- a/src/app/pages/check-out/check-out.component.html
+++ b/src/app/pages/check-out/check-out.component.html
@@ -177,7 +177,7 @@
     <div class="row">
       <div class="col-4"></div>
       <div class="col-4">
-        <button class="btn btn-pri btnlg w-100">Place order</button>
+        <button class="btn btn-pri btnlg w-100" routerLink="/thank-you">Place order</button>
       </div>
       <div class="col-4"></div>
     </div>
