--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -268,19 +268,18 @@
               </a>
               <div class="item-inf text-center">
                 <p class="mdt my-2">{{item.name}}</p>
-                <p class="mdt">{{item.price | currency: 'USD'}}</p>
+                <p class="">{{item.price | currency: 'USD'}}</p>
               </div>
             </div>
             <div class="jewel">
-              <p class="mdt">Jewellery</p>
+              <p class="mdt mb-1">Jewellery</p>
               <p class="smt my-2">{{item.jewellery_type}}</p>
-              <p class="smt mb-0">Round brilliant diamonds</p>
               <p class="smt my-2">4mm width</p>
-              <p class="smt">Carat total weight .48</p>
+              <p class="smt mb-0">Carat total weight .48</p>
             </div>
-            <div class="line"></div>
+            <div class="line my-2"></div>
             <div class="mater">
-              <p class="mdt">Material</p>
+              <p class="mdt mb-1">Material</p>
               <p class="smt">16k {{item.material}}</p>
             </div>
             <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal">Add to bag</button>
@@ -292,19 +291,18 @@
               </a>
               <div class="item-inf text-center">
                 <p class="mdt my-2">{{item.name}}</p>
-                <p class="mdt">{{item.price | currency: 'USD'}}</p>
+                <p class="">{{item.price | currency: 'USD'}}</p>
               </div>
             </div>
             <div class="jewel">
-              <p class="mdt">Jewellery</p>
+              <p class="mdt mb-1">Jewellery</p>
               <p class="smt my-2">{{item.jewellery_type}}</p>
-              <p class="smt mb-0">Pear brilliant diamonds</p>
               <p class="smt my-2">2.5mm width x2</p>
-              <p class="smt">Carat total weight .50</p>
+              <p class="smt mb-0">Carat total weight .50</p>
             </div>
-            <div class="line"></div>
+            <div class="line my-2"></div>
             <div class="mater">
-              <p class="mdt">Material</p>
+              <p class="mdt mb-1">Material</p>
               <p class="smt">18k {{item.material}}</p>
             </div>
             <button type="button" class="btn btn-pri btnsm w-100" data-bs-dismiss="modal">Add to bag</button>
