--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -237,7 +237,7 @@
   <div class="simi-prod">
     <div class="row">
       <div class="col-3">
-        <h5>Similar Products</h5>
+        <h5 class="pt-5 mb-2">Similar Products</h5>
         <p class="smt">AGURI designs reinvent our iconic AGURI collection with bold profiles and powerful details.</p>
       </div>
       <div class="col-3" *ngFor="let item of similar | slice: 0: 3">
@@ -316,7 +316,7 @@
 <!--MAY YOU ALSO LIKE-->
 <div class="also-like">
   <h5 class="text-center">You May Also Like</h5>
-  <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also" data-bs-ride="carousel">
+  <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also mb-5" data-bs-ride="carousel">
     <div class="carousel-inner container">
       <div class="carousel-item active" data-bs-interval="6000">
         <div class="row">
@@ -459,7 +459,7 @@
 
 <!--REVIEW-->
 <div class="review container">
-  <div class="d-flex review-start">
+  <div class="d-flex review-start py-5">
     <h3>4,9</h3>
     <div class="d-flex my-auto">
       <i class="fa-solid fa-star fa-xl"></i>
@@ -552,7 +552,6 @@
           </div>
         </div>
       </div>
-      <div class="line mb-3"></div>
     </div>
 
 
