--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -155,9 +155,9 @@
   </div>
 </div>
 
-<div class="container">
-  <!--New Arrivals-->
-  <div class="simi-prod new-arrivals mbt-120">
+<!--New Arrivals-->
+<div class="simi-prod new-arrivals mbt-120">
+  <div class="container">
     <div class="row">
       <div class="col-3">
         <h5 class="mt-5">New Arrivals</h5>
@@ -203,7 +203,10 @@
       </div>
     </div>
   </div>
-  <!--Modal Quick view-->
+</div>
+<!--Modal Quick view-->
+
+<div class="container">
   <div class="modal fade" id="quickview">
     <div class="modal-dialog modal-dialog-centered quickview">
       <div class="modal-content">
