--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -247,19 +247,13 @@
 
     <div class="col-7 jewellery-care">
       <img src="./assets/img/guide/5.png"/>
-      <p class="mtp">Jewellery: Gold plated over sterling silver or brass</p>
-      <ul>
-        <li class="smt">Keep your jewellery dry. Don't do laundry or wash dishes with it on.</li>
-        <li class="smt">Don't wear it in pool, at the spa or in a seawater.</li>
-        <li class="smt">Take it off before working out.</li>
-        <li class="smt">Keep it away from body chemistry: your perfume, lotion, hand cream etc...</li>
-        <li class="smt">Don't use jewellery cleaner to clean it. it is too harsh, regular wipe with a soft cloth its all you need.</li>
-        <li class="smt">Keep it in our AGURI pouch and a box in a dry and clean environment when you don't wear it.</li>
-      </ul>
-      <p class="mt-3">Jewelry: Gold plated over stainless steel</p>
-      <ul>
-        <li class="smt">Jewellery is waterproof but please keep it away from harsh or sharp objects to avoid scratching.</li>
-      </ul>
+      <p class="mdt mb-3 mt-5">Make it last longer and keep its shine</p>
+        <p class="mb-1">* Keep your jewellery dry. Don't do laundry or wash dishes with it on.</p>
+        <p class="mb-1">* Don't wear it in pool, at the spa or in a seawater.</p>
+        <p class="mb-1">* Take it off before working out.</p>
+        <p class="mb-1">* Keep it away from body chemistry: your perfume, lotion, hand cream etc...</p>
+        <p class="mb-1">* Don't use jewellery cleaner to clean it. it is too harsh, regular wipe with a soft cloth.</p>
+        <p class="mb-1">* Keep it in our pouch and a box in a dry and clean environment when you don't wear it.</p>
     </div>
   </div>
 </div>
