--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -60,11 +60,11 @@
       <div class="col-8 ps-0 showcase-content">
         <div class="showcase-title row">
           <div class="col-8 showcase-title-inner">
-            <p class="decor-text mb-2">AGURI'S COLLECTION</p>
-            <h4 class="mb-3">All Our Beautiful Collection</h4>
+            <p class="decor-text mb-1">AGURI'S COLLECTION</p>
+            <h4 class="mb-2">Our Precious Jewelry Collections</h4>
             <p class="smt">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit. Rhoncus laoreet turpis dignissim condimentum. Lorem
-              ipsum dolor sit amet, consectetur adipiscing elit.
+              Our goal is to offer you beautiful, classy and timeless jewellery that won't break the bank. We guarantee
+              the highest quality pieces you can rock everyday and for all occasions.
             </p>
           </div>
           <div class="col-2"></div>
@@ -166,7 +166,7 @@
       <div class="col-9">
         <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
           <div class="carousel-inner">
-            <div class="carousel-item active" data-bs-interval="4000">
+            <div class="carousel-item active" data-bs-interval="3000">
               <div class="row">
                 <div class="col-4" *ngFor="let item of newArrival | slice: 0:3">
                   <div class="card-prd">
@@ -182,7 +182,7 @@
                 </div>
               </div>
             </div>
-            <div class="carousel-item" data-bs-interval="4000">
+            <div class="carousel-item" data-bs-interval="3000">
               <div class="row">
                 <div class="col-4" *ngFor="let item of newArrival | slice: 3:6">
                   <div class="card-prd">
