--- a/src/app/pages/shop-all/shop-all.component.html
+++ b/src/app/pages/shop-all/shop-all.component.html
@@ -416,7 +416,7 @@
               <option value="3">5 1/2</option>
             </select>
           </div>
-          <button type="button" class="btn btn-pri mb-3" data-bs-dismiss="modal">Add to bag</button>
+          <button type="button" class="btn btn-pri mb-3 w-100" data-bs-dismiss="modal">Add to bag</button>
           <a href="">
             <p>View more detail</p>
           </a>
