--- a/src/app/pages/category/category.component.html
+++ b/src/app/pages/category/category.component.html
@@ -68,7 +68,7 @@
             <span> ～ </span>
             <input type="text" placeholder="Max" class="col-5 price-box">
           </div>
-          <button type="submit" class="btn btn-sec btnsm mt-3" onclick="alert('Loading...')">Apply</button>
+          <button type="submit" class="btn btn-pri btnsm mt-3" onclick="alert('Loading...')">Apply</button>
         </form>
       </div>
     </div>
