--- a/src/app/pages/sub-category/sub-category.component.css
+++ b/src/app/pages/sub-category/sub-category.component.css
@@ -84,3 +84,11 @@
   margin-bottom:80px;
   margin-top:80px;
 }
+/*sticky category sid bar*/
+div.sticky{
+  position: -webkit-sticky;
+  position: sticky;
+  top: 0;
+  padding-bottom:60px;
+  padding-top:40px;
+}
