--- a/src/app/pages/about-us/about-us.component.html
+++ b/src/app/pages/about-us/about-us.component.html
@@ -19,14 +19,11 @@
   </div>
   <!--introduction-->
   <div class="banner-img mbt-120">
-      <div class="">
-        <img src="./assets/img/about-us/1.png" />
-      </div>
-      <div class="banner-img-text text-center">
-        <h5>AGURI BRAND</h5>
-        <h2>&</h2>
-        <h4>PASCAL IMITATION JEWELLERY</h4>
-      </div>
+    <div class="text-center text-light">
+      <h5 >AGURI BRAND</h5>
+      <h2 class="my-1">&</h2>
+      <h4>PASCAL IMITATION JEWELLERY</h4>
+    </div>
   </div>
   <!--the-brand-->
   <div class="row who mbt-120">
