--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -218,21 +218,23 @@
       <div class="line mt-3"></div>
     </div>
   </div>
+
+</div>
   <!--jewellery-insurance-->
   <div class="insurance row mbt-120">
-    <div class="col-2"></div>
-    <div class="col-8 text-center">
-      <div class="">
-        <h4 class="mb-3">Jewellery Insurance</h4>
-        <p class="smt mt-40">Though our AGURI jewelry designs are made to be enjoyed forever, sometimes unpleasant surprises happen.
-          With this in mind, it’s best to be prepared and insured. We recommend Jeweler’s Mutual for jewelry insurance,
-          as many of our past customers have had great experiences working with them.</p>
-        <button class="btn btnlg btn-sec w-50" onclick="alert('Loading...')">Read more</button>
-      </div>
+    <div class="col"></div>
+    <div class="col-10 text-center">
+      <h4 class="mb-3">Jewellery Insurance</h4>
+      <p class="smt mt-40 mb-3">Though our AGURI jewelry designs are made to be enjoyed forever, sometimes unpleasant surprises happen.
+        With this in mind, it’s best to be prepared and insured. We recommend Jeweler’s Mutual for jewelry insurance,
+        as many of our past customers have had great experiences working with them.</p>
+      <p class="smt">AGURI is a fine jewelry destination for memorable pieces designed and crafted in NYC. Our carefully considered selection of rings, necklaces, earrings and bracelets honors mindful
+        production and genuine materials.</p>
     </div>
-    <div class="col-2"></div>
+    <div class="col"></div>
   </div>
 </div>
+
 <!--jewellery-care-->
 <div class="container jewel-care mbt-120">
   <div class="row pbt-100">
@@ -257,16 +259,7 @@
     </div>
   </div>
 </div>
-  <!--bottom-text-->
-  <div class="row pbt-100">
-    <div class="col-1"></div>
-    <div class="col-10">
-      <h5 class="text-center">AGURI is a fine jewelry destination for memorable pieces designed and crafted in
-        New York City. Our carefully considered selection of rings, necklaces, earrings and bracelets honors mindful
-        production and genuine materials.</h5>
-    </div>
-    <div class="col-1"></div>
-  </div>
+
 
 
 
