--- a/src/app/pages/thank-you/thank-you.component.html
+++ b/src/app/pages/thank-you/thank-you.component.html
@@ -16,76 +16,80 @@
     </div>
     <div class="col-3"></div>
   </div>
-  <div class="row your-bill">
+  <div class="row">
     <div class="col-7">
-      <div>
-        <p>Shipping adress</p>
-        <p>Thuy Duong Nguyen</p>
-        <p>98 Hue Street, Pho Hue Ward, Hai Ba Trung</p>
-        <p>Tel: 0339898989</p>
-        <p>Nthduong198@gmail.com</p>
-      </div>
-      <div>
-        <p>Payment method</p>
-        <p>Visa Card Ending in 2028</p>
-      </div>
-      <div>
-        <p>Shipping method</p>
-        <p>By Air - Fixed</p>
+      <div class="your-bill">
+        <div>
+          <p class="mdt">Shipping adress</p>
+          <p class="smt">Thuy Duong Nguyen</p>
+          <p class="smt">98 Hue Street, Pho Hue Ward, Hai Ba Trung</p>
+          <p class="smt">Tel: 0339898989</p>
+          <p class="smt">Nthduong198@gmail.com</p>
+        </div>
+        <div class="my-3">
+          <p class="mdt">Payment method</p>
+          <p class="smt">Visa Card Ending in 2028</p>
+        </div>
+        <div>
+          <p class="mdt">Shipping method</p>
+          <p class="smt">By Air - Fixed</p>
+        </div>
       </div>
     </div>
-    <div class="col-5 billing-summary">
-      <h5 class="text-center mb-3">BILLING SUMMARY</h5>
-      <div class="row">
-        <div class="col-10 ps-0">
-          <p>Diamonds and Gold Spark Ring</p>
+    <div class="col-5">
+      <div class="billing-summary">
+        <h5 class="text-center mb-3">BILLING SUMMARY</h5>
+        <div class="row">
+          <div class="col-10 ps-0">
+            <p>Diamonds and Gold Spark Ring</p>
+          </div>
+          <div class="col-2 pe-0">
+            <p>$6,700</p>
+          </div>
         </div>
-        <div class="col-2 pe-0">
-          <p>$6,700</p>
+        <p>x1</p>
+        <div class="row">
+          <div class="col-10 ps-0">
+            <p>Diamonds and Gold Spark Ring</p>
+          </div>
+          <div class="col-2 pe-0">
+            <p>$5,000</p>
+          </div>
         </div>
-      </div>
-      <p>x1</p>
-      <div class="row">
-        <div class="col-10 ps-0">
-          <p>Diamonds and Gold Spark Ring</p>
+        <p>x1</p>
+        <div class="line my-3"></div>
+        <div class="row total-itm">
+          <div class="col-10 ps-0">
+            <p>Items Total</p>
+          </div>
+          <div class="col-2 pe-0">
+            <p>$11,700</p>
+          </div>
         </div>
-        <div class="col-2 pe-0">
-          <p>$5,000</p>
+        <div class="row ship-fee">
+          <div class="col-10 ps-0">
+            <p>Shipping Fee</p>
+          </div>
+          <div class="col-2 pe-0">
+            <p>$0</p>
+          </div>
         </div>
-      </div>
-      <p>x1</p>
-      <div class="line my-3"></div>
-      <div class="row total-itm">
-        <div class="col-10 ps-0">
-          <p>Items Total</p>
+        <div class="row ship-fee">
+          <div class="col-10 ps-0">
+            <p>Discount (coupon)</p>
+          </div>
+          <div class="col-2 pe-0">
+            <p>-$7,00</p>
+          </div>
         </div>
-        <div class="col-2 pe-0">
-          <p>$11,700</p>
-        </div>
-      </div>
-      <div class="row ship-fee">
-        <div class="col-10 ps-0">
-          <p>Shipping Fee</p>
-        </div>
-        <div class="col-2 pe-0">
-          <p>$0</p>
-        </div>
-      </div>
-      <div class="row ship-fee">
-        <div class="col-10 ps-0">
-          <p>Discount (coupon)</p>
-        </div>
-        <div class="col-2 pe-0">
-          <p>-$7,00</p>
-        </div>
-      </div>
-      <div class="line mb-3"></div>
-      <div class="total-itm row">
-        <div class="col-10 ps-0">
-          <p class="mdt">Order Total</p>
-        </div>
-        <div class="col-2 p2-0">
-          <p class="mdt">$11,700</p>
+        <div class="line mb-3"></div>
+        <div class="total-itm row">
+          <div class="col-10 ps-0">
+            <p class="mdt">Order Total</p>
+          </div>
+          <div class="col-2 p2-0">
+            <p class="mdt">$11,700</p>
+          </div>
         </div>
       </div>
     </div>
