--- a/src/app/pages/thank-you/thank-you.component.html
+++ b/src/app/pages/thank-you/thank-you.component.html
@@ -4,7 +4,7 @@
 </div>
   <h4 class="text-center">Thank you! Your Order Has Been Processed!</h4>
   <p class="mdt text-center">You will receive an order confirmation email with details of your order</p>
-  <div class="row">
+  <div class="row thanks">
     <div class="col-3"></div>
     <div class="row col-6">
       <div class="col-6">
@@ -16,7 +16,7 @@
     </div>
     <div class="col-3"></div>
   </div>
-  <div class="row">
+  <div class="row order-detail">
     <div class="col-7">
       <div class="your-bill">
         <div>
