--- a/src/app/pages/thank-you/thank-you.component.css
+++ b/src/app/pages/thank-you/thank-you.component.css
@@ -12,21 +12,20 @@
   stroke-width: 2;
   stroke-miterlimit: 10;
   stroke: #000;
-  fill: #fff;
+  fill: #FAF8F6;
   animation: stroke 0.6s cubic-bezier(0.65, 0, 0.45, 1) forwards;
 }
 
 .checkmark {
-  width: 130px;
-  height: 130px;
+  width: 140px;
+  height: 140px;
   border-radius: 50%;
   display: block;
   stroke-width: 2;
   stroke: #000;
   stroke-miterlimit: 10;
-  margin: 10% auto;
-  box-shadow: inset 0px 0px 0px #7ac142;
-  animation: fill .4s ease-in-out .4s forwards, scale .3s ease-in-out .9s both;
+  margin: 5% auto;
+  animation: fill .5s ease-in-out .5s forwards, scale .3s ease-in-out .9s both;
 }
 
 .checkmark__check {
