--- a/src/app/pages/thank-you/thank-you.component.html
+++ b/src/app/pages/thank-you/thank-you.component.html
@@ -5,8 +5,8 @@
     <path class="checkmark__check" fill="none" d="M14.1 27.2l7.1 7.2 16.7-16.8"/>
   </svg>
 </div>
-  <h4 class="text-center">Thank you! Your Order Has Been Processed!</h4>
-  <p class="mdt text-center">You will receive an order confirmation email with details of your order</p>
+  <h4 class="text-center mb-3">Thank you! Your Order Has Been Processed!</h4>
+  <p class="text-center mb-4">You will receive an order confirmation email with details of your order</p>
   <div class="row thanks">
     <div class="col-3"></div>
     <div class="row col-6">
@@ -20,7 +20,7 @@
     <div class="col-3"></div>
   </div>
   <div class="row order-detail">
-    <div class="col-7">
+    <div class="col-7 ps-0">
       <div class="your-bill">
         <div>
           <p class="mdt">Shipping adress</p>
@@ -39,7 +39,7 @@
         </div>
       </div>
     </div>
-    <div class="col-5">
+    <div class="col-5 pe-0">
       <div class="billing-summary">
         <h5 class="text-center mb-3">BILLING SUMMARY</h5>
         <div class="row">
