--- a/src/app/pages/thank-you/thank-you.component.html
+++ b/src/app/pages/thank-you/thank-you.component.html
@@ -27,15 +27,17 @@
           <p class="smt">Thuy Duong Nguyen</p>
           <p class="smt">98 Hue Street, Pho Hue Ward, Hai Ba Trung</p>
           <p class="smt">Tel: 0339898989</p>
-          <p class="smt">Nthduong198@gmail.com</p>
+          <p class="smt mb-0">Nthduong198@gmail.com</p>
         </div>
-        <div class="my-3">
+        <div class="line my-4"></div>
+        <div class="">
           <p class="mdt">Payment method</p>
-          <p class="smt">Visa Card Ending in 2028</p>
+          <p class="smt mb-0">Visa Card Ending in 2028</p>
         </div>
+        <div class="line my-4"></div>
         <div>
           <p class="mdt">Shipping method</p>
-          <p class="smt">By Air - Fixed</p>
+          <p class="smt mb-0">Free ship - Fixed - Flat rate</p>
         </div>
       </div>
     </div>
