--- a/src/app/pages/contact/contact.component.html
+++ b/src/app/pages/contact/contact.component.html
@@ -54,7 +54,7 @@
 <!--Map here-->
 <div class="aguri-info container">
   <div>
-    <h5 class="text-center mb-3">Our Showrooms</h5>
+    <h5 class="text-center mb-3">Come and visit us</h5>
   </div>
     <div>
       <agm-map [latitude]=34.102345 [longitude]=-118.340389 [zoom]=10></agm-map>
