--- a/src/app/pages/guide/guide.component.html
+++ b/src/app/pages/guide/guide.component.html
@@ -239,8 +239,8 @@
 <div class="container jewel-care mbt-120">
   <div class="row pbt-100">
     <div class="col-5">
-      <div class="mb-5">
-        <h4 class="mb-3">Jewellery Care</h4>
+      <div class="mb-4">
+        <h4 class="mb-2">Jewellery Care</h4>
         <p class="smt">Even though all plated jewellery tends to loose a little bit of the plating and colour over time,
           there are a few things you can do to make it last longer and keep its shine.</p>
       </div>
@@ -255,7 +255,7 @@
         <p class="mb-1">* Take it off before working out.</p>
         <p class="mb-1">* Keep it away from body chemistry: your perfume, lotion, hand cream etc...</p>
         <p class="mb-1">* Don't use jewellery cleaner to clean it. it is too harsh, regular wipe with a soft cloth.</p>
-        <p class="mb-1">* Keep it in our pouch and a box in a dry and clean environment when you don't wear it.</p>
+        <p class="mb-1">* Keep it in our pouch in a dry and clean environment when you don't wear it.</p>
     </div>
   </div>
 </div>
