--- a/src/app/pages/product-detail/product-detail.component.html
+++ b/src/app/pages/product-detail/product-detail.component.html
@@ -313,9 +313,9 @@
   </div>
 </div>
 
-<!--MAY YOU ALSO LIKE-->
+<!--More from this collection-->
 <div class="also-like">
-  <h5 class="text-center">You May Also Like</h5>
+  <h5 class="text-center">Discover More From This Collection</h5>
   <div id="carouselalsolike" class="carousel slide carousel-dark carousel-also mb-5" data-bs-ride="carousel">
     <div class="carousel-inner container">
       <div class="carousel-item active" data-bs-interval="6000">
@@ -454,6 +454,30 @@
         </div>
       </div>
     </div>
+  </div>
+</div>
+<!--more abt collection-->
+<div class=" more-collection mbt-120">
+  <div class="row more-collec-inner">
+    <div class="col"></div>
+    <div class="col-4 collec-left">
+      <div class="collec-content">
+        <h5 class="mb-2">AGURI's Eternity Magic</h5>
+        <p class="smt mb-5">Inspired by a unisex bracelet from 1971 found in the House’s archive, the AGURI's Eternity Magic
+          features bold designs that play with tension, proportion and balance.</p>
+      </div>
+      <div class="text-center">
+        <a routerLink="#">Shop The Collection<i class="ms-3 fa-regular fa-arrow-right"></i></a>
+      </div>
+      <div class="collec-img">
+        <img src="./assets/img/product-detail/collec1.png"/>
+      </div>
+    </div>
+    <div class="col"></div>
+    <div class="col-5 px-0">
+      <img src="./assets/img/product-detail/collec2.png"/>
+    </div>
+    <div class="col"></div>
   </div>
 </div>
 
