--- a/src/app/pages/about-us/about-us.component.css
+++ b/src/app/pages/about-us/about-us.component.css
@@ -31,6 +31,7 @@
 /*our-vision*/
 .vision-content{
   position:relative;
+  background-color:#fff;
 
 }
 .vision-inner{
@@ -43,9 +44,7 @@
   padding-left:40px;
   padding-right:120px;
 }
-
-
 /*our mission*/
 .our-mission-text{
-  padding-top:210px;
+  padding-top:220px;
 }
