--- a/src/app/pages/product-detail/product-detail.component.css
+++ b/src/app/pages/product-detail/product-detail.component.css
@@ -62,3 +62,17 @@
   margin-top:40px;
   margin-bottom:60px;
 }
+/*exlore collection*/
+.more-collection{
+  background: #fff;
+}
+.collec-left{
+  position: relative;
+}
+.collec-img{
+  position:absolute;
+  bottom:0;
+}
+.collec-content{
+  margin-top:38%;
+}
