--- a/src/app/pages/home/home.component.css
+++ b/src/app/pages/home/home.component.css
@@ -7,6 +7,9 @@
   background: #fff;
 }
 /*Showcase*/
+.aguri-showcase{
+  margin-bottom:90px;
+}
 .showcase-title-inner{
   position: relative;
   animation: mymove 2s;
@@ -62,11 +65,21 @@
   color:#fff;
   text-decoration: underline;
 }
-/*Best seller*/
+/*our best seller*/
 .best-seller{
   background-color: #fff;
   padding-top:60px;
   padding-bottom:60px;
+}
+/*about*/
+.about{
+  background-image: url("/assets/img/guide/insurance.png");
+  background-size: cover;
+  padding-top:100px;
+  padding-bottom:100px;
+  margin-top:120px;
+  background-repeat: no-repeat;
+  background-attachment: fixed;
 }
 /*New Collection*/
 .new-collection-bottom{
@@ -92,6 +105,7 @@
   padding-top:80px;
   padding-bottom:80px;
 }
+
 
 
 
